--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,14 +8,20 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  dev: ^1.0.0
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  get_it: ^7.7.0
+  http: ^1.2.2
+  json_annotation: ^4.9.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^3.0.0
+  json_serializable: ^6.8.0
+  build_runner: ^2.4.11
 
 flutter:
   uses-material-design: true
